@@ -256,6 +256,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   rate limits.
 * (bug 21222) When $wgUseTeX is not enabled, <math> is no longer registered with
   the parser so extensions are free to implement their own <math> tag
+* (bug 21047) Wrap 'cannotdelete' into a div with the generic 'error' class and
+  an own 'mw-error-cannotdelete' class
 
 === Bug fixes in 1.16 ===
 
